Prevented Horizontal Scroll

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,6 +17,11 @@ body {
   background-color: #fff;
 }
 
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 h1,
 h2,
 h3 {
